Rearrange testCases